fix statistic endpoint
